--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,15 @@
     "node": "16.x"
   },
   "dependencies": {
+    "@artsy/fresnel": "^6.1.0",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.1.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
