--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "heroku-postbuild": "npm run clean && npm run build && npm run deploy"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "gulp": "^4.0.2",
     "react-router-dom": "^6.3.0",
     "semantic-ui-css": "^2.4.1",
